--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                                 </span>
                                             </div>
                                             <div class="card-body">
-                                                Working as Software Engineer and Involved in Natural Language Processing algorithms/Model development.Experience in NLP,ML,AI and Python.
+                                                <p>Working as Software Engineer and Involved in Natural Language Processing algorithms/Model development.Experience in NLP,ML,AI and Python.</p>
                                             </div>
                                         </div>
                                     </div>
