--- a/index.html
+++ b/index.html
@@ -493,6 +493,14 @@
                                             </div>
                                         </a>
                                     </li>
+                                    <li class="col-12 col-md-6 col-lg-4">
+                                        <a href="#0" data-type="project-7">
+                                            <img src="img/projects/mlbasics.jpg" alt="Project" class="img-fluid">
+                                            <div><span>Machine Learning Basics</span>
+                                            </div>
+                                        </a>
+                                    </li>
+
                                     <!-- Portfolio Item Ends -->
                                     <!-- Portfolio Item Starts -->
                                     <!-- <li class="col-12 col-md-6 col-lg-4">
@@ -738,7 +746,36 @@
                     <!-- Project Details Ends -->
                 </div>
                 <!-- Portfolio Project Content Ends -->
-
+                <div class="project-info-container project-7">
+                    <!-- Main Content Starts -->
+                    <div class="project-info-main-content">
+                        <img src="img/projects/mlbasics.jpg" alt="Project Image">
+                    </div>
+                    <!-- Main Content Ends -->
+                    <!-- Project Details Starts -->
+                    <div class="projects-info row">
+                        <div class="col-12 col-sm-6 p-none">
+                            <h3 class="font-weight-600 uppercase">Machine Learning Basics-Article</h3>
+                            <ul class="project-details">
+                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">Machine Learning Basic Overviews</span>
+                                </li>
+                                <!-- <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
+                                </li>
+                                <li><i class="fa fa-hourglass-o"></i><span class="font-weight-400 project-label"> Duration </span>: <span class="font-weight-600 uppercase">10days</span>
+                                </li> -->
+                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Machine Learning,Pandas,Numpy and Python...</span>
+                                </li>
+                                <!--<li><i class="fa fa-money"></i> <span class="font-weight-400 project-label"> Budget</span> : <span class="font-weight-600 uppercase">1550 USD</span>
+                                </li> -->
+                            </ul>
+                            <a href="documents/Machinelearning_Basics.pdf" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>preview</span></a>
+                        </div>
+                        <div class="col-6 p-none text-right">
+                            <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
+                        </div>
+                    </div>
+                    <!-- Project Details Ends -->
+                </div>
 
 
                 <!-- Portfolio Project Content Starts -->
