--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
 							</a>
 						</div>
 					</li>
-					<!--<li>
+					<li>
 						<div>
 							<a id="link-blog" href="#blog">
 								<i class="fa fa-comments"></i><span>my Blog</span>
 							</a>
 						</div>
-					</li>-->
+					</li>
 				</ul>
 				<!-- Mobile Navigation Ends -->
 			</div>
@@ -260,7 +260,7 @@
                                                 </span>
                                             </div>
                                             <div class="card-body">
-                                                <p>Working as Software Engineer and Involved in Natural Language Processing algorithms/Model development.Experience in NLP,ML,AI and Python.</p>
+                                                Working as Software Engineer and Involved in Natural Language Processing algorithms/Model development.Experience in NLP,ML,AI and Python.
                                             </div>
                                         </div>
                                     </div>
@@ -477,19 +477,19 @@
                                     </li>
                                     <!-- Portfolio Item Ends -->
                                     <!-- Portfolio Item Starts -->
-                                    <li class="col-12 col-md-6 col-lg-4">
+                                    <!-- <li class="col-12 col-md-6 col-lg-4">
                                         <a href="#0" data-type="project-5">
                                             <img src="img/projects/MNIST.png" alt="Project" class="img-fluid">
                                             <div><span>MNIST Dataset</span>
                                             </div>
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <!-- Portfolio Item Ends -->
                                     <!-- Portfolio Item Starts -->
                                     <li class="col-12 col-md-6 col-lg-4">
                                         <a href="#0" data-type="project-6">
-                                            <img src="img/projects/project-4.jpg" alt="Project" class="img-fluid">
-                                            <div><span>Image Format</span>
+                                            <img src="img/projects/textclassification.jpg" alt="Project" class="img-fluid">
+                                            <div><span>Text Classification</span>
                                             </div>
                                         </a>
                                     </li>
@@ -501,6 +501,15 @@
                                         </a>
                                     </li>
 
+                                    <!-- Project New 23/08-->
+
+                                    <li class="col-12 col-md-6 col-lg-4">
+                                        <a href="#0" data-type="project-8">
+                                            <img src="img/projects/Keras_TF.jpg" alt="Project" class="img-fluid">
+                                            <div><span>Regression Model With Keras-TF2.0</span>
+                                            </div>
+                                        </a>
+                                    </li>
                                     <!-- Portfolio Item Ends -->
                                     <!-- Portfolio Item Starts -->
                                     <!-- <li class="col-12 col-md-6 col-lg-4">
@@ -689,32 +698,26 @@
 
                 <!-- Portfolio Project Content Ends -->
                 <!-- Portfolio Project Content Starts -->
-                <div class="project-info-container project-5">
-                    <!-- Main Content Starts -->
-                    <div class="project-info-main-content">
-                        <img src="img/projects/MNIST.png" alt="Project Image">
-                    </div>
-                    <!-- Main Content Ends -->
-                    <!-- Project Details Starts -->
-                    <div class="projects-info row">
-                        <div class="col-12 col-sm-6 p-none">
-                            <h3 class="font-weight-600 uppercase">MNIST Dataset</h3>
-                            <ul class="project-details">
-                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">MNIST Dataset Visualization</span>
-                                </li>
-                                <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
-                                </li>
-                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Pandas,NumPy,Matplotlib and Seaborn.. </span>
-                                </li>
-                            </ul>
-                            <a href="https://github.com/SandeepKumarAre/Datascience/blob/master/EDA_IrisData/MNIST_Dataset%20Example.ipynb" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>preview</span></a>
-                        </div>
-                        <div class="col-6 p-none text-right">
-                            <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
-                        </div>
-                    </div>
-                    <!-- Project Details Ends -->
-                </div>
+            
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 <!-- Portfolio Project Content Ends -->
 
 
@@ -722,22 +725,24 @@
                 <div class="project-info-container project-6">
                     <!-- Main Content Starts -->
                     <div class="project-info-main-content">
-                        <img src="img/projects/MNIST.png" alt="Project Image">
+                        <img src="img/projects/textclassification.jpg" alt="Project Image">
                     </div>
                     <!-- Main Content Ends -->
                     <!-- Project Details Starts -->
                     <div class="projects-info row">
                         <div class="col-12 col-sm-6 p-none">
-                            <h3 class="font-weight-600 uppercase">MNIST Dataset</h3>
+                            <h3 class="font-weight-600 uppercase">Text Classification</h3>
                             <ul class="project-details">
                                 <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">MNIST Dataset Visualization</span>
                                 </li>
                                 <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
                                 </li>
-                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Pandas,NumPy,Matplotlib and Seaborn.. </span>
+                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Pandas,NumPy,Navie-Bayes, Super Vector Classification,sci-kit learn,metrics </span>
                                 </li>
                             </ul>
-                            <a href="https://github.com/SandeepKumarAre/Datascience/blob/master/EDA_IrisData/MNIST_Dataset%20Example.ipynb" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>preview</span></a>
+                            <a href="documents/Word Embeddings.pdf" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>Word Embedding-Techniques</span></a><br><br>
+
+                            <a href="https://colab.research.google.com/drive/1oP-zfEl80syT6hySl8NJdJbyIfSUJt32?usp=sharing" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>preview</span></a>
                         </div>
                         <div class="col-6 p-none text-right">
                             <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
@@ -776,9 +781,46 @@
                     </div>
                     <!-- Project Details Ends -->
                 </div>
-
-
                 <!-- Portfolio Project Content Starts -->
+
+
+                <!--  Project 8-->
+                <div class="project-info-container project-8">
+                    <!-- Main Content Starts -->
+                    <div class="project-info-main-content">
+                        <img src="img/projects/Keras_TF.jpg" alt="Project Image">
+                    </div>
+                    <!-- Main Content Ends -->
+                    <!-- Project Details Starts -->
+                    <div class="projects-info row">
+                        <div class="col-12 col-sm-6 p-none">
+                            <h3 class="font-weight-600 uppercase">Regression Model With Keras-TF2</h3>
+                            <ul class="project-details">
+                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">Regression Model With Keras-TF2</span>
+                                </li>
+                                <!-- <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
+                                </li>
+                                <li><i class="fa fa-hourglass-o"></i><span class="font-weight-400 project-label"> Duration </span>: <span class="font-weight-600 uppercase">10days</span>
+                                </li> -->
+                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Keras-Sequential Model, TensorFlow2.0, Pandas,Numpy and Python...</span>
+                                </li>
+                                <!--<li><i class="fa fa-money"></i> <span class="font-weight-400 project-label"> Budget</span> : <span class="font-weight-600 uppercase">1550 USD</span>
+                                </li> -->
+                            </ul>
+                            <a href="documents/Deep learning with TF_2.0_1.pdf target="_blank" class="btn"><span><i class="fa fa-external-link"></i>ANN - Keras Basics_1</span></a><br><br>
+                            <a href="documents/Deeplearning TF_2.0_2.pdf" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>ANN - Keras Basics_2</span></a><br><br>
+                            <a href="https://colab.research.google.com/drive/1KE8JhqSzaOk3LofBPnBtU6tHCE8IQqFz?usp=sharing" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>Google Colab Preview</span></a><br>
+                        </div>
+                        <div class="col-6 p-none text-right">
+                            <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
+                        </div>
+                    </div>
+                    <!-- Project Details Ends -->
+                </div>
+
+
+
+                <!-- End Of Project 8-->
 
 
                 <!--   Here I need to paste Same-->
