--- a/index.html
+++ b/index.html
@@ -516,6 +516,13 @@
                                             </div>
                                         </a>
                                     </li>
+                                    <li class="col-12 col-md-6 col-lg-4">
+                                        <a href="#0" data-type="project-8">
+                                            <img src="img/projects/autism.png" alt="Project" class="img-fluid">
+                                            <div><span>Autism (ASD) Classification</span>
+                                            </div>
+                                        </a>
+                                    </li>
 
                                     <!-- Project New 23/08-->
 
@@ -806,6 +813,37 @@
                     <!-- Project Details Ends -->
                 </div>
                 <!-- Portfolio Project Content Starts -->
+
+                <div class="project-info-container project-8">
+                    <!-- Main Content Starts -->
+                    <div class="project-info-main-content">
+                        <img src="img/projects/autism.png" alt="Project Image">
+                    </div>
+                    <!-- Main Content Ends -->
+                    <!-- Project Details Starts -->
+                    <div class="projects-info row">
+                        <div class="col-12 col-sm-6 p-none">
+                            <h3 class="font-weight-600 uppercase">Autism (ASD) Classification</h3>
+                            <ul class="project-details">
+                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">Autism (ASD) Classification</span>
+                                </li>
+                                <!-- <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
+                                </li>
+                                <li><i class="fa fa-hourglass-o"></i><span class="font-weight-400 project-label"> Duration </span>: <span class="font-weight-600 uppercase">10days</span>
+                                </li> -->
+                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Python, Pandas,seaborn,scikit-learn models, LoggisticRegression, KNN, RandomForest Models</span>
+                                </li>
+                                <!--<li><i class="fa fa-money"></i> <span class="font-weight-400 project-label"> Budget</span> : <span class="font-weight-600 uppercase">1550 USD</span>
+                                </li> -->
+                            </ul>
+                            <a href="https://colab.research.google.com/drive/1BccOj3T5PQLnN8Qqb2Cce96gOmz5gepp?usp=sharing" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>preview</span></a>
+                        </div>
+                        <div class="col-6 p-none text-right">
+                            <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
+                        </div>
+                    </div>
+                    <!-- Project Details Ends -->
+                </div>
 
 
                 
