--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                                 <!--<li><i class="fa fa-money"></i> <span class="font-weight-400 project-label"> Budget</span> : <span class="font-weight-600 uppercase">1550 USD</span>
                                 </li> -->
                             </ul>
-                            <a href="https://colab.research.google.com/drive/1DKI2CP5jL4DGoiU0cc4ln63Y7cF3L19l?usp=sharing" class="btn" target="_blank"><span><i class="fa fa-external-link"></i>preview</span></a>
+                            <a href="https://github.com/SandeepKumarAre/Datascience/blob/master/NLP_BOW_1.ipynb" class="btn" target="_blank"><span><i class="fa fa-external-link"></i>preview</span></a>
                         </div>
                         <div class="col-6 p-none text-right">
                             <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
