--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 										<h6><span class="font-weight-600">Nationality</span>Indian</h6>
 									</li>
 									<li>
-										<h6><span class="font-weight-600">Experience</span>5.7+ years</h6>
+										<h6><span class="font-weight-600">Experience</span>6+ years</h6>
 									</li>
 									<li>
 										<h6><span class="font-weight-600">Address</span>Hyderabad,India</h6>
@@ -409,6 +409,19 @@
 							<!-- Skill Bar Starts -->
                             <div class="col-12 col-sm-6 col-md-4">
                                 <span class="skill-text">Quantitative Models</span>
+                                <div class="chart-bar">
+                                    <span class="item-progress" data-percent="60" style="width: 60%;"></span>
+                                    <span class="percent" style="right: calc(40% - 21px);">60%<div class="arrow"></div></span>
+                                </div>
+                            </div>
+                            <!-- Skill Bar Ends -->
+							<!-- Skill Bar Starts -->
+							
+							
+							                            <!-- Skill Bar Ends -->
+							<!-- Skill Bar Starts -->
+                            <div class="col-12 col-sm-6 col-md-4">
+                                <span class="skill-text">Time Series Analysis with Python</span>
                                 <div class="chart-bar">
                                     <span class="item-progress" data-percent="60" style="width: 60%;"></span>
                                     <span class="percent" style="right: calc(40% - 21px);">60%<div class="arrow"></div></span>
