--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 							                            <!-- Skill Bar Ends -->
 							<!-- Skill Bar Starts -->
                             <div class="col-12 col-sm-6 col-md-4">
-                                <span class="skill-text">Time Series Analysis with Python</span>
+                                <span class="skill-text">Time Series Analysis</span>
                                 <div class="chart-bar">
                                     <span class="item-progress" data-percent="60" style="width: 60%;"></span>
                                     <span class="percent" style="right: calc(40% - 21px);">60%<div class="arrow"></div></span>
