--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                 <div class="project-info-container project-BERT">
                     <!-- Main Content Starts -->
                     <div class="project-info-main-content">
-                        <img src="img/projects/autism.png" alt="Project Image">
+                        <img src="img/projects/bert-distilbert-sentence-classification.jpg" alt="Project Image">
                     </div>
                     <!-- Main Content Ends -->
                     <!-- Project Details Starts -->
