--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                                     <!-- Portfolio Item Starts -->
                                     <li class="col-12 col-md-6 col-lg-4">
                                         <a href="#0" data-type="project-BERT">
-                                            <img src="img/projects/bert-distilbert-sentence-classification.jpg" alt="Project" class="img-fluid">
+                                            <img src="img/projects/BERT.jpg" alt="Project" class="img-fluid">
                                             <div><span>BERT Illustration</span>
                                             </div>
                                         </a>
@@ -864,7 +864,7 @@
                 <div class="project-info-container project-BERT">
                     <!-- Main Content Starts -->
                     <div class="project-info-main-content">
-                        <img src="img/projects/bert-distilbert-sentence-classification.jpg" alt="Project Image">
+                        <img src="img/projects/BERT.jpg" alt="Project Image">
                     </div>
                     <!-- Main Content Ends -->
                     <!-- Project Details Starts -->
