ECS page update
ECS page update

--- a/index.html
+++ b/index.html
@@ -587,13 +587,13 @@
                         <div class="col-12 col-sm-6 p-none">
                             <h3 class="font-weight-600 uppercase">AWS ECS Deployment</h3>
                             <ul class="project-details">
-                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">Amazon Food REVIEW CASE STUDY</span>
+                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">AWS ECS Deployment</span>
                                 </li>
                                 <!-- <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
                                 </li>
                                 <li><i class="fa fa-hourglass-o"></i><span class="font-weight-400 project-label"> Duration </span>: <span class="font-weight-600 uppercase">10days</span>
                                 </li> -->
-                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">Python-3,Pandas,Numpy,Unsupervised-Learning,K-Means, DBSCAN Clusturing...</span>
+                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">AWS IAM ROLES, Docker container, ECR, ECS Cluster, ECS Deployment, ALB(application Load Balancer)... & so on </span>
                                 </li>
                                 <!--<li><i class="fa fa-money"></i> <span class="font-weight-400 project-label"> Budget</span> : <span class="font-weight-600 uppercase">1550 USD</span>
                                 </li> -->
