--- a/index.html
+++ b/index.html
@@ -452,6 +452,15 @@
                                     <!-- Project New 23/08-->
 
 
+                                    <li class="col-12 col-md-6 col-lg-4">
+                                        <a href="#0" data-type="AWSAIFC01">
+                                            <img src="img/projects/AWS-AI-Practitioner.jpg" alt="Project" class="img-fluid">
+                                            <div><span>AWS Certified AI Practitioner</span>
+                                            </div>
+                                        </a>
+                                    </li>
+      
+
 
                                     <li class="col-12 col-md-6 col-lg-4">
                                         <a href="#0" data-type="AWS-ECS">
@@ -575,6 +584,46 @@
 					<div class="portfolio-overlay"></div>
 					<!-- PORTFOLIO OVERLAY ENDS -->
                 </div>
+
+
+
+                <div class="project-info-container AWSAIFC01">
+                    <!-- Main Content Starts -->
+                    <div class="project-info-main-content">
+                        <img src="img/projects/AWS-AI-Practitioner.jpg" alt="Project Image">
+                    </div>
+                    <!-- Main Content Ends -->
+                    <!-- Project Details Starts -->
+                    <div class="projects-info row">
+                        <div class="col-12 col-sm-6 p-none">
+                            <h3 class="font-weight-600 uppercase">AWS Certified AI Practitioner</h3>
+                            <ul class="project-details">
+                                <li><i class="fa fa-file-text-o"></i><span class="font-weight-400 project-label"> Project </span>: <span class="font-weight-600 uppercase">AWS Certified AI Practitioner</span>
+                                </li>
+                                <!-- <li><i class="fa fa-user-o"></i><span class="font-weight-400 project-label"> Client </span>: <span class="font-weight-600 uppercase">Self</span>
+                                </li>
+                                <li><i class="fa fa-hourglass-o"></i><span class="font-weight-400 project-label"> Duration </span>: <span class="font-weight-600 uppercase">10days</span>
+                                </li> -->
+                                <li><i class="fa fa-code"></i> <span class="font-weight-400 project-label"> Technologies</span> : <span class="font-weight-600 uppercase">AWS IAM ROLES,ECR, ECS Cluster, ECS Deployment, ALB(application Load Balancer)... & so on </span>
+                                </li>
+                                <!--<li><i class="fa fa-money"></i> <span class="font-weight-400 project-label"> Budget</span> : <span class="font-weight-600 uppercase">1550 USD</span>
+                                </li> -->
+                            </ul>
+                            <!--<a href="documents/Deep learning with TF_2.0_1.pdf" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>ANN - Keras Basics_1</span></a><br><br>
+                            <a href="documents/Deeplearning TF_2.0_2.pdf" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>ANN - Keras Basics_2</span></a><br><br> -->
+                            <a href="documents/AWS Certified AI Practitioner certificate.pdf" target="_blank" class="btn"><span><i class="fa fa-external-link"></i>AWS Certified AI Practitioner</span></a><br>
+                        </div>
+                        <div class="col-6 p-none text-right">
+                            <a href="#" class="btn btn-secondary close-project"><span><i class="fa fa-close"></i>Close</span></a>
+                        </div>
+                    </div>
+                    <!-- Project Details Ends -->
+                </div>
+
+
+
+
+
 
                 <div class="project-info-container AWS-ECS">
                     <!-- Main Content Starts -->
